--- a/user/templates/profile.html
+++ b/user/templates/profile.html
@@ -25,6 +25,8 @@
         
     </div>
   </div>
+  <a class="btn btn-outline-success mx-2" href="{% url "Logout" %}">Logout</a>
+
 </nav>
     <h2>{{name}}</h2>
     <img class="m-4" src="{{picture}}" />
