--- a/user/templates/checkout.html
+++ b/user/templates/checkout.html
@@ -16,7 +16,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Home</a>
+            <a class="navbar-brand" href="{% url "Home" %}">Home</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -32,15 +32,16 @@
         </div>
         <a class="btn btn-outline-success mx-2" href="{% url "Logout" %}">Logout</a>
     </nav>
+    <h2 id="heading">Donations</h2>
     <form action="" method="post">
         {% csrf_token %}
-        <input id="your_name" type="number" max="9999999999" min="1000000000" name="number" value={{number}} />
-        <input class='m-3 mt-0' type="submit" value="Set Number" />
+        <input id="number" type="number" max="9999999999" min="1000000000" name="number" value={{number}} />
+        <input class='m-3 mt-0' id='setn' type="submit" value="Set Number" />
     </form>
     <form action="" method="post">
         {% csrf_token %}
-        <input id="your_name" type="number" min="0" name="amount" value={{amount}} />
-        <input class='m-3 mt-0' type="submit" value="Set Amount" />
+        <input id="amount" type="number" min="0" name="amount" value={{amount}} />
+        <input class='m-3 mt-0' id="seta" type="submit" value="Set Amount" />
     </form>
 
     <button class="btn-primary m-3" id="rzp-button1">Pay</button>
@@ -50,7 +51,7 @@
     <script>
         var options = {
             "key": "{{api_key}}", // Enter the Key ID generated from the Dashboard
-            "amount": "{{amount}}", // Amount is in currency subunits. Default currency is INR. Hence, 50000 refers to 50000 paise
+            "amount": document.getElementById("amount").value, // Amount is in currency subunits. Default currency is INR. Hence, 50000 refers to 50000 paise
             "currency": "INR",
             "name": "Test App",
             "description": "Test Transaction",
@@ -58,9 +59,15 @@
             "order_id": "{{id}}", //This is a sample Order ID. Pass the `id` obtained in the response of Step 1
             "handler": function (response) {
                 var csrftoken = Cookies.get('csrftoken');
+                $("h2").text("You Have Donated {{amount}}Rs");
+                document.getElementById("number").style.display = "none";
+                document.getElementById("amount").style.display = "none";
+                document.getElementById("seta").style.display = "none";
+                document.getElementById("rzp-button1").style.display = "none";
+                document.getElementById("setn").style.display = "none";                
                 $.ajax({
                     type: "POST",
-                    url: "/home/",
+                    url: "/add/",
                     data: {
                         payment_id: response.razorpay_payment_id,
                         order_id: response.razorpay_order_id,
@@ -79,7 +86,7 @@
             "prefill": {
                 "name": "{{user.username}}",
                 "email": "{{email}}",
-                "contact": "{{number}}"
+                "contact": document.getElementById("number").value
             },
             "notes": {
                 "address": "Razorpay Corporate Office"
