--- a/user/templates/checkout.html
+++ b/user/templates/checkout.html
@@ -72,7 +72,8 @@
                         payment_id: response.razorpay_payment_id,
                         order_id: response.razorpay_order_id,
                         signature: response.razorpay_signature,
-                        amount: "{{amount}}"
+                        amount: "{{amount}}",
+                        status: true,
                     },
                     success: function () {
                         console.log(response)
@@ -97,13 +98,31 @@
         };
         var rzp1 = new Razorpay(options);
         rzp1.on('payment.failed', function (response) {
-            alert(response.error.code);
-            alert(response.error.description);
-            alert(response.error.source);
-            alert(response.error.step);
-            alert(response.error.reason);
-            alert(response.error.metadata.order_id);
-            alert(response.error.metadata.payment_id);
+            var csrftoken = Cookies.get('csrftoken');
+                $("h2").text("Your Payment Was a Faliure");
+                document.getElementById("number").style.display = "none";
+                document.getElementById("amount").style.display = "none";
+                document.getElementById("seta").style.display = "none";
+                document.getElementById("rzp-button1").style.display = "none";
+                document.getElementById("setn").style.display = "none";                
+                $.ajax({
+                    type: "POST",
+                    url: "/add/",
+                    data: {
+                        payment_id: response.razorpay_payment_id,
+                        order_id: response.razorpay_order_id,
+                        signature: response.razorpay_signature,
+                        amount: "{{amount}}",
+                        status: false,
+                    },
+                    success: function () {
+                        console.log(response)
+                    },
+                    headers: {
+                        'X-CSRFToken': csrftoken
+                    },
+                    dataType: "json"
+                });
         });
         document.getElementById('rzp-button1').onclick = function (e) {
             rzp1.open();
