--- a/user/templates/profile.html
+++ b/user/templates/profile.html
@@ -1,79 +1,84 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Profile</title>
-  </head>
-  <body>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="{% url 'Home' %}">Home</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Profile</a>
-        </li>
-        
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+  <title>Profile</title>
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="{% url 'Home' %}">Home</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Profile</a>
+          </li>
+
+      </div>
+    </div>
+    <a class="btn btn-outline-success mx-2" href="{% url "Logout" %}">Logout</a>
+
+  </nav>
+  <h2>{{name}}</h2>
+  <img class="m-4" src="{{picture}}" />
+  <div class="m-4 row">
+    <label for="staticEmail" class="col-sm-2 col-form-label">Total Amount payed</label>
+    <div class="col-sm-10">
+      <input type="text" readonly class="form-control-plaintext" id="staticEmail"
+        value="{{user.profile.total_amount}}" />
     </div>
   </div>
-  <a class="btn btn-outline-success mx-2" href="{% url "Logout" %}">Logout</a>
-
-</nav>
-    <h2>{{name}}</h2>
-    <img class="m-4" src="{{picture}}" />
-    <div class="m-4 row">
-      <label for="staticEmail" class="col-sm-2 col-form-label">Total Amount payed</label>
-      <div class="col-sm-10">
-        <input
-          type="text"
-          readonly
-          class="form-control-plaintext"
-          id="staticEmail"
-          value="{{user.profile.total_amount}}"
-        />
-      </div>
+  <div class="m-4 row">
+    <label for="staticEmail" class="col-sm-2 col-form-label">Payments</label>
+    <div class="col-sm-10">
+      <input type="text" readonly class="form-control-plaintext" id="staticEmail" value="{{user.profile.Payments}}" />
     </div>
-    <div class="m-4 row">
-      <label for="staticEmail" class="col-sm-2 col-form-label">Payments</label>
-      <div class="col-sm-10">
-        <input
-          type="text"
-          readonly
-          class="form-control-plaintext"
-          id="staticEmail"
-          value="{{user.profile.Payments}}"
-        />
-      </div>
-    </div>
-    <h3>Payments</h3>
-    {% for payment in payments %}
-    <div class="card m-2" style="width: 18rem;">
+  </div>
+  <h3>Payments</h3>
+  {% for payment in payments %}
+  <div class="card m-2" style="width: 18rem;">
     <div class="card-body">
-    <h1 class="card-title" style="font-size: 4ex;">{{payment.amount}}Rs</h1>
-    <h6 style="font-size: 2ex;">{{payment.date}}</h6>
-    </div>  
+      <h1 class="card-title" style="font-size: 4ex;">{{payment.amount}}Rs</h1>
+      <h6 style="font-size: 2ex;">{{payment.date}}</h6>
+      {% if payment.status %}
+      <div class="alert alert-success" role="alert">
+        Transaction Successful
+      </div>
+      {% else %}
+      <div class="alert alert-danger" role="alert">
+        Transaction Failed
+      </div>
+      {% endif %}
     </div>
-    {% endfor %}
+  </div>
+  {% endfor %}
 
 
-    <!-- Optional JavaScript; choose one of the two! -->
+  <!-- Optional JavaScript; choose one of the two! -->
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <!-- Option 1: Bootstrap Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
 
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
+  <!-- Option 2: Separate Popper and Bootstrap JS -->
+  <!--
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     -->
-  </body>
+</body>
+
 </html>
